reflected xss 공격 구현 완료

--- a/templates/reflected_board/index.html
+++ b/templates/reflected_board/index.html
@@ -4,10 +4,17 @@
      <div class="d-flex justify-content-between align-items-center">
         <div>
             <h1 class="h3 mb-2 text-gray-800">Reflected XSS Board</h1>
-            <p class="mb-4">이 페이지는 취약한 게시판 페이지 입니다.</p>
+            {% if search %}
+                <p class="mb-4">"{{ search|safe }}"에 대한 검색 결과입니다.</p>
+                
+            {% else %}
+                <p class="mb-4">이 페이지는 취약한 게시판 페이지 입니다.</p>
+                
+            {% endif %}
         </div>
         <div>
-            <form method="get" action="./" class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+            <form method="post" action="./" class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+                {% csrf_token %}
                 <div class="input-group">
                     <input type="text" name="search" class="form-control bg-light border-0 small" placeholder="제목으로 검색" aria-label="Search" aria-describedby="basic-addon2">
                     <div class="input-group-append">
